--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ventury",
-    "short_name": "ventury",
+    "name": "ventory",
+    "short_name": "ventory",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
