--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ventury
+name: ventory
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +41,7 @@ dependencies:
   photo_view: ^0.13.0
   http: ^0.13.4
   animated_tree_view: ^0.1.1
+  flutter_material_pickers: ^3.1.4+1
 
 dev_dependencies:
   flutter_test:
