--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.1
   get_storage: ^2.0.3 
-  flutter_svg: ^1.0.3
-  photo_view: ^0.13.0
   http: ^0.13.4
   animated_tree_view: ^0.1.1
   flutter_material_pickers: ^3.1.4+1
+  shared_preferences: ^2.0.15
+  package_info_plus: ^1.0.2
+  flutter_launcher_icons: "^0.7.3"
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
