--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ventory">
+    package="com.example.base_app">
    <application
-        android:label="ventory"
+        android:label="base_app"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
